Comunicação com o PostgreSQL Signed-off-by:enilsonfilho <enilsonfilho.dev@hotmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url = jdbc:postgresql://localhost:5432/springbatch
+spring.datasource.database=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postdba
+spring.batch.initialize-schema:always
